started setting up scss, love2 stress about JS semi colon placements

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,7 +17,15 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "styles/styles.scss",
+      "imports": [
+        "_partials/_setup.scss",
+        "_partials/_box.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
