card flip works, functionality works, added x and checks for right-wrong answer

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,6 +22,8 @@
       "path": "styles/styles.scss",
       "imports": [
         "_partials/_setup.scss",
+        "_partials/_globalVars.scss",
+        "_partials/_design.scss",
         "_partials/_box.scss"
       ]
     }
