adding some styling

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,8 @@
       "imports": [
         "_partials/_setup.scss",
         "_partials/_globalVars.scss",
-        "_partials/_design.scss",
+        "_partials/_title.scss",
+        "_partials/_instructions.scss",
         "_partials/_box.scss"
       ]
     }
