--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,6 +25,7 @@
         "_partials/_globalVars.scss",
         "_partials/_title.scss",
         "_partials/_instructions.scss",
+        "_partials/_input.scss",
         "_partials/_box.scss"
       ]
     }
