indenting code, making responsive

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,6 +26,7 @@
         "_partials/_title.scss",
         "_partials/_instructions.scss",
         "_partials/_input.scss",
+        "_partials/_score.scss",
         "_partials/_buttons.scss",
         "_partials/_box.scss"
       ]
