--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,7 +28,8 @@
         "_partials/_score.scss",
         "_partials/_input.scss",
         "_partials/_buttons.scss",
-        "_partials/_box.scss"
+        "_partials/_box.scss",
+        "_partials/_footer.scss"
       ]
     }
   ],
