--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,7 +22,7 @@
       "path": "styles/styles.scss",
       "imports": [
         "_partials/_setup.scss",
-        "_partials/_globalVars.scss",
+        "_partials/_global-vars.scss",
         "_partials/_title.scss",
         "_partials/_instructions.scss",
         "_partials/_score.scss",
